1998-10-23  Cristian Tibirna  <ctibirna@gch.ulaval.ca>

	* titlebar.cpp: completed what Matthias started (took out
		useless checks)
	* widows.cpp: make autoRaise toggling much clearer

1998-10-22  Matthias Ettrich  <ettrich@kde.org>

	* titlebar.cpp: less options on titlebar doubleclick

1998-10-21  Cristian Tibirna  <ctibirna@gch.ulaval.ca>

	* desktop.[cpp,h]: now with consistent layout use
		resizeEvent() deleted

1998-10-19  Cristian Tibirna  <ctibirna@gch.ulaval.ca>

	* windows.[cpp,h]: now with consistent layout use
		resizeEvent() deleted

1998-10-18  Cristian Tibirna  <ctibirna@gch.ulaval.ca>

	* titlebar.[cpp,h]: fixed the (in)activetitleebar pixmap selection 
		1998-10-21 (still buggy, don't quite understand why)